fix z-index for contactUs button

--- a/src/components/design-system/ContactUsButton/styles.scss
+++ b/src/components/design-system/ContactUsButton/styles.scss
@@ -8,7 +8,7 @@
   right: 25px;
   transition: all .25s ease;
   transform: translateY(0px);
-  z-index: 1;
+  z-index: 5;
   @include extra-small{
     &.ui.button{
       display: none;
